// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadedListPage redirects and alerts when loading fails 1`] = `
<RedirectAndAlert
  alert={
    Object {
      "message": "Unable to find list A1C1_D1C1",
      "type": "error",
    }
  }
  to="/recipient-validation"
/>
`;

exports[`UploadedListPage renders the list error when the job status is error 1`] = `
<form>
   
  <Page
    breadcrumbAction={
      Object {
        "component": [Function],
        "content": "Back",
        "to": "/recipient-validation",
      }
    }
    title="Recipient Validation"
  >
    <Panel>
      <OGOnlyWrapper
        as={[Function]}
      >
        <div>
          <strong>
            Nov 21 1997
          </strong>
          <span>
             at 
          </span>
          <strong>
            10:55am
          </strong>
        </div>
      </OGOnlyWrapper>
      <OGOnlyWrapper
        as={[Function]}
      >
        <ListError />
      </OGOnlyWrapper>
    </Panel>
  </Page>
</form>
`;

exports[`UploadedListPage renders with list progress 1`] = `
<form>
   
  <Page
    breadcrumbAction={
      Object {
        "component": [Function],
        "content": "Back",
        "to": "/recipient-validation",
      }
    }
    title="Recipient Validation"
  >
    <Panel>
      <OGOnlyWrapper
        as={[Function]}
      >
        <div>
          <strong>
            Nov 21 1997
          </strong>
          <span>
             at 
          </span>
          <strong>
            10:55am
          </strong>
        </div>
      </OGOnlyWrapper>
      <OGOnlyWrapper
        as={[Function]}
      >
        <Component
          job={
            Object {
              "jobId": "A1C1_D1C1",
              "status": "success",
              "updatedAt": "1997-11-21T15:55:06Z",
            }
          }
        />
      </OGOnlyWrapper>
    </Panel>
  </Page>
</form>
`;
